tests/NormalTests/paczka1/fuzzy1/96950084.err
Error in line 11: 2OZyZ S776 65,4
Error in line 22: S776 A744 26,0
Error in line 36: S776 S808 75,8
Error in line 13: 6Qol4YJy A957 68,2
